--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Anyone Can Fish</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Anyone Can Fish Map</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_signout">Sign Out</string>
 </resources>
