--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Anyone Can Fish</string>
     <string name="title_activity_maps">Anyone Can Fish Map</string>
-    <string name="menu_settings">Settings</string>
-    <string name="menu_signout">Sign Out</string>
+    <string name="title_activity_main">Main Menu</string>
+
+    <string name="mainmenu_settings">Settings</string>
+    <string name="mainmenu_signout">Sign Out</string>
+
+    <!-- complete sun and moon data for one day -->
+    <string name="sun_moon_api_baseurl">https://api.usno.navy.mil/rstt/oneday?</string>
+
 </resources>
