--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -7,13 +7,16 @@
     <string name="mainmenu_signout">Sign Out</string>
 
     <!-- complete sun and moon data for one day -->
-    <string name="sun_moon_api_baseurl">https://api.usno.navy.mil/rstt/oneday?</string>
+    <string name="solunar_api_baseurl">api.usno.navy.mil/rstt/oneday?</string>
+    <string name="first_weather_api_baseurl">api.weather.gov/points/</string>
+    <string name="weather_properties_OBJ">properties</string>
+    <string name="weather_properties_forecast_STR">forecast</string>
     
     <!-- Firebase Firestore Database Collections-->
     <string name="db_game_fish">game_fish</string>
     <string name="db_users">users</string>
-    <string name="db_tackle_boxes">Tackle Boxes</string>
+    <string name="db_tackle_boxes">TackleBoxes</string>
     <string name="db_trips">Trips</string>
     <string name="db_lures">Lures</string>
-    <string name="db_fish_events">Fish Events</string>
+    <string name="db_fish_events">FishEvents</string>
 </resources>
