1) need to troubleshoot firestore "collection" ".get()" : -tackleboxes -trips *** - possibly due to object data not matching database data
2) NETWORKING/API: need to create service/receiver for calling Solunar Data API
- should be straightforward based on the schema working for the others

--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="mainmenu_signout">Sign Out</string>
 
     <!-- complete sun and moon data for one day -->
-    <string name="solunar_api_baseurl">http://api.usno.navy.mil/rstt/oneday?</string>
-    <string name="first_weather_api_baseurl">http://api.weather.gov/points/</string>
+    <string name="solunar_api_baseurl">https://api.usno.navy.mil/rstt/oneday?</string>
+    <string name="first_weather_api_baseurl">https://api.weather.gov/points/</string>
     <string name="weather_properties_OBJ">properties</string>
     <string name="weather_properties_forecast_STR">forecast</string>
 
