had to specifically add a cert for the solunar api, due to it being self-signed
------------------------------------------------------------------------
Firestore:
- need to establish the code for allowing objects to be added, updated, deleted
1. Trips
2. FishEvents

2) NETWORKING/API:
 1. need to create service/receiver for calling Solunar Data API
  - should be straightforward based on the schema working for the others
 2. need to map data to views for solunar data

3. Widget:
 - need to make one that shows:
  - "fishing outlook"
  - allows FishEvent to be created

--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -13,7 +13,10 @@
     <string name="mainmenu_signout">Sign Out</string>
 
     <!-- complete sun and moon data for one day -->
-    <string name="solunar_api_baseurl">https://api.usno.navy.mil/rstt/oneday?</string>
+    <string name="solunar_api_baseurl">https://api.usno.navy.mil/rstt/oneday</string>
+    <string name="solunar_param_date">date</string>
+    <string name="solunar_param_coords">coords</string>
+    <string name="solunar_param_timezone">tz</string>
     <string name="first_weather_api_baseurl">https://api.weather.gov/points/</string>
 
     <!-- Firebase Firestore Database Collections-->
