--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Anyone Can Fish</string>
     <string name="little_fish_icon">Little Fish Icon</string>
     <string name="forecast_weather_icon">Weather Icon</string>
-    <string name="title_activity_maps">Anyone Can Fish Map</string>
+    <string name="action_settings">Settings</string>
 
     <string name="main_btn_fishing_basics">Fishing Basics</string>
     <string name="main_btn_game_fish">Game Fish of North America</string>
@@ -21,13 +21,13 @@
 
     <!-- Firebase Firestore Database Collections-->
     <string name="db_game_fish">game_fish</string>
+    <string name="db_basic_info">basic_info</string>
     <string name="db_users">users</string>
     <string name="db_tackle_boxes">TackleBoxes</string>
     <string name="db_trips">Trips</string>
     <string name="db_lures">Lures</string>
     <string name="db_fish_events">FishEvents</string>
     <string name="db_public_fish_events">PublicFishEvents</string>
-
 
     <!--content description-->
     <string name="content_outlook">Fishing Outlook</string>
@@ -36,19 +36,25 @@
     <string name="content_log_event_icon">Icon of a leaping fish</string>
     <string name="content_forecast_icon">Representation of Forecast</string>
     <string name="content_tackle_box_image">Image of a tackle box</string>
+    <string name="content_basic_info_image">Fishing Equipment</string>
     <string name="calculatron_info">An estimate of whether the fishing is good or bad or iffy</string>
 
     <string name="title_activity_fishing_basics">The Basics of Fishing</string>
     <string name="title_activity_game_fish">Game Fish of North America</string>
     <string name="title_activity_fishing_trips">Fishing Trips</string>
     <string name="title_activity_tackle_boxes">Tackle Boxes</string>
+    <string name="title_activity_basic_equipment">Basic Equipment</string>
+    <string name="title_activity_how_to_fish_">How To Fish</string>
+    <string name="title_activity_maintenance_">Maintenance</string>
+    <string name="title_activity_maps">Anyone Can Fish Map</string>
 
     <string name="basics_whatyouneed">Basic Equipment</string>
-    <string name="basics_howtofish">Someone being mentored</string>
-    <string name="basics_rulesresources">Dept of Fish and Wildlife</string>
-    <string name="basics_maintenance">Untying a knot</string>
-    <string name="title_activity_what_you_need_">WhatYouNeed_Activity</string>
-    <string name="large_text">
+    <string name="basics_howtofish">Mentor Someone</string>
+    <string name="basics_rulesresources">U.S Fish and Wildlife Service</string>
+    <string name="usa_fish_and_wildlife_url">https://www.fws.gov/</string>
+    <string name="basics_maintenance">Maintenance</string>
+
+    <string name="large_text_HowToFish">
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -61,81 +67,87 @@
         "The fundamentals of light, surface, and movement are key to conveying how objects move, "
         "interact, and exist in space and in relation to each other. Realistic lighting shows "
         "seams, divides space, and indicates moving parts.\n\n"
-
-        "Bold, graphic, intentional.\n\n"
-
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
-
-        "Motion provides meaning.\n\n"
-
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
-
-        "3D world.\n\n"
-
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
-
-        "Light and shadow.\n\n"
-
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">Settings</string>
+    <string name="large_text_basic_equipment">
+        "Using the right tool makes any job easier.\n\n"
+
+        "That having been said, depending on the job, deciding on what the right tool is isn't always obvious."
+        "I'll try and categorize a few ways of fishing, with what seems to me to be the minimum gear
+        to take with you that will allow you to fish until you want to stop fishing.\n\n"
+
+        "Line \n"
+        "Choosing the correct line to use is important. Have an idea of what type of fish you plan on
+        trying to catch, and what the typical size range of those fish is. While line material technology
+        is constantly being improved on, generally speaking, look for a line weight that barely meets
+        or exceeds the size of the fish you will probably be encountering. This will allow for the least
+        line visibility - you don't want fish to notice it - and greatest sensitivity. The rod you choose
+        also matters when it comes to the size range of the line you should use. Larger weight lines
+        tend to reduce the sensitivity, and increase the visibility, among other aspects. Bring a spare
+        spool with you.\n\n"
+
+        "Hooks \n"
+        "Just like with the thought behind line; bigger is not necessarily better. Once again, it depends
+        on the type of fish you are fishing for, but keeping the hook smaller is a good idea for a few
+        reasons:\n"
+        "- the fish won't be able to see it as well\n"
+        "- the fish will actually be able to get hooked\n"
+        "- you won't overwhelm the bait you are using\n\n"
+        "You also want to pick the right style of hook. Hooks come in many shapes and styles - too many
+        for me to cover all of them. In general, the aspects that they are specialized for are:\n"
+        "1) what type of bait you are using\n"
+        "2) how you plan on fishing with it; i.e. with a bobber, trolling, etc.\n\n"
+
+        "Sinkers \n
+        Are you fishing for surface-focused fish? If not, you most definitely need a way to get your
+        bait down to the fish you are targeting, and that's where a sinker comes into play. Weigh things
+        down.\n
+        Depending on if you are using a bobber, "bouncing the bottom", trolling, or trying to keep your
+        bait anchored in one place, you will need to look at a different type of sinker.\n\n
+
+        A Rod \n
+        When I say 'rod', I mean this in the most basic sense; something for you to hold in order to
+        safely apply pressure to the line in order to bring any fish out of the water, and successfully
+        into your possession! This could be something as simple as a cane pole, but probably something
+        made out of graphite, meant to work with a reel. What you want out of the rod you choose is a
+        combination of flexibility, sensitivity, and size that is appropriate for *how* you are going
+        to fish, and what type of fish you anticipate catching.\n\n
+
+        A Reel \n
+        This is a device that serves safely store the line you are using, in such a way to protect it
+        from damage, and allow it to be dynamically lengthened or shortened when trying to catch fish.
+        Reels (and rods) can be very expensive, and depending on the type of fishing you are planning
+        on doing, may require careful care. Essentially - as is the trend with a number of pieces of
+        gear - you want to pick a reel that is the right size and style for how you are trying to fish
+        and what you are fishing for.\n\n
+
+        Bait\n
+        Depending on what you are trying to catch, there are so many different things you can fish with
+        - both live and inanimate - that it's impossible for me to cover this topic completely. What
+        you need to use is simply something to put on the other end of the line from you, that you think
+        a fish will want to put into its mouth.\n\n
+
+        Pliers and/or Hemostats \n
+        - The mouths of fish can be very tough, and once a hook is embedded, they can be difficult to
+        remove - especially since most hooks are barbed.\n
+        - The fish could have swallowed the hook further down than you can grab, and having a thin tool
+        to reach down in a fish mouth can be handy.\n
+        - Some fish have sharp teeth and/or strong jaws that you don't want to put your fingers anywhere
+        close to.\n\n
+
+        Clippers or a Knife (cutting tool) \n
+        Most of the reasons for having a cutting tool at hand have to do with the line. Mainly it's:\n
+        - after tying a knot\n
+        - if a fish completely swallows the bait\n
+        - if you get hopelessly snagged\n
+        - if a giant knot forms in the middle of your line\n\n
+
+        Towel\n
+        Always remember to bring a towel.
+        "
+    </string>
+    <string name="large_text_Maintenance">
+        "Keeping your line in the water.\n\n"
+
+        "Just like with most things in this world, fishing gear will only last as long as it is cared for appropriately."
+    </string>
 </resources>
