--- a/AnyoneCanFish/app/src/main/res/values/strings.xml
+++ b/AnyoneCanFish/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="title_activity_tackle_boxes">Tackle Boxes</string>
     <string name="title_activity_lures">Lures</string>
     <string name="title_activity_basic_equipment">Basic Equipment</string>
-    <string name="title_activity_how_to_fish_">How To Fish</string>
+    <string name="title_activity_how_to_fish_">Mentor Someone</string>
     <string name="title_activity_maintenance_">Maintenance</string>
     <string name="title_activity_maps">Anyone Can Fish Map</string>
     <string name="title_activity_fish_events">Fish Events</string>
